[package]
name = "harlo-wasm"
version = "0.1.0"
authors = ["moseslee90 <moseslee90@gmail.com>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/moseslee90/harlo-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.31", features = ['console'] }